2008-03-19  Manuel Arostegui <marostegui@artica.es>

	* linux/pandora_agent.spec: Adapted to the new 1.3.X version
	  of the Pandora Agents.

2008-03-14  Ramon Novoa  <rnovoa@artica.es>

	* win32/pandora_windows_service.cc: Added support for Tentacle file transfers.
	* win32/pandora_windows_service.h: Added support for Tentacle file transfers.

2008-03-11  Ramon Novoa  <rnovoa@artica.es>

	* linux/pandora_agent: Added support for Tentacle file transfers.
	* linux/pandora_agent.conf: Added Tentacle specific options.

2008-03-11 Manuel Arostegui <marostegui@artica.es>

        * linux/pandora_agent_daemon: Added pidof checking to
        check the PID of the process.

2008-02-02 Sancho lerena <slerena@gmail.com>

	* pandora_arduino.c: Added microcode for arduino.

	* AUTHORS: Added Jorge to autors, was missing.

	* pandora_serialread: Added sleep to improve serial read.

2008-01-10 Sancho Lerena <slerena@gmail.com>

        * Win32: Deleted old installer exes. 

2008-01-08 Sancho Lerena <slerena@gmail.com>

	* mac_osx/*: Added code for Mac OsX Agent contributed by Evi Vanoost.

2008-01-02 Sancho lerena <slerena@gmail.com>

	* openWRT/*: Added code for new ASYNC agent for OpenWRT/Arduino
	agent, this would be the new SYNC/ASYNC agent for Pandora FMS 2.0.
	This is first development version, DO NOT TEST YET. It has several
	code specific for OpenWRT enviroment.

2007-09-14 Sancho Lerena <slerena@gmail.com>

	* Deleted a lot of old stuff (licenses, readmes, etc). Put on agent root dir

2007-08-29  Raul Mateos  <raulofpandora@gmail.com>

	* win32/bin/pandora_agent.conf: Added comments about usage and samples.

2007-08-27  Raul Mateos  <raulofpandora@gmail.com>

	* win32/installer/How_to_create_installer.txt: Changed mpi name.
	Added libcurl.dll and more info.

2007-08-23  Sancho Lerena <slerena@artica.es>

	* linux/pandora_agent_installer: Fixed problem with /var/log/pandora

	* linux/README: Added, replacing old INSTALL file.
